Update baseurl and add CNAME for custom domain

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseurl: https://qianqiuqiu.github.io/
+baseurl: https://qianqiuqiu.xyz/
 languageCode: en-us
 theme: hugo-theme-stack
 title: Qianqiu Blog
